--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "exit 1",
-    "start": "start http://localhost:1998 && node node/server.js"
+    "start": "start http://localhost:1998 && nodemon node/server.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/Alpakash/the-powerpuff-girls-es6#readme",
   "dependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "nodemon": "^2.0.14",
     "path": "^0.12.7"
   }
 }
