--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A cool app to lookup all the powerpuff girls episodes",
   "main": "index.js",
   "scripts": {
-    "test": "exit 1",
+    "test": "mocha",
     "start": "start http://localhost:1998 && nodemon server.js"
   },
   "repository": {
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mocha": "^9.1.3",
     "nodemon": "^2.0.14"
   }
 }
