--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "start": "start http://localhost:1998 && nodemon server.js"
+    "start": "start http://localhost:1998 && nodemon server.js",
+    "build": "babel src -d build"
   },
   "repository": {
     "type": "git",
@@ -20,10 +21,11 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.14",
-    "tailwindcss": "^2.2.19"
+    "nodemon": "^2.0.14"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-latest": "^6.24.1",
     "chai": "^4.3.4",
     "mocha": "^9.1.3"
   }
