--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "homepage": "https://github.com/Alpakash/the-powerpuff-girls-es6#readme",
   "dependencies": {
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "nodemon": "^2.0.14"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
