--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "mocha",
     "start": "node server.js",
-    "build": "babel src -d build"
+    "build": "babel src -d build",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-latest": "^6.24.1",
     "chai": "^4.3.4",
+    "eslint": "^8.3.0",
     "mocha": "^9.1.3"
   }
 }
