--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A cool app to lookup all the powerpuff girls episodes",
   "main": "server.js",
   "scripts": {
-    "test": "mocha --watch",
+    "test": "mocha --watch --require @babel/register --require jsdom-global/register",
     "start": "node server.js",
     "build": "babel src -d build",
     "lint": "eslint ."
@@ -20,8 +20,12 @@
   },
   "homepage": "https://github.com/Alpakash/the-powerpuff-girls-es6#readme",
   "dependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/register": "^7.16.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "regenerator-runtime": "^0.13.9",
     "set-value": ">=4.0.1"
   },
   "devDependencies": {
@@ -29,6 +33,8 @@
     "babel-preset-latest": "^6.24.1",
     "chai": "^4.3.4",
     "eslint": "^8.3.0",
+    "jsdom": "^19.0.0",
+    "jsdom-global": "^3.0.2",
     "mocha": "^9.1.3"
   }
 }
