--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,13 @@
 {
 	"presets": [
-		"@babel/preset-env"
+		[
+			"@babel/preset-env",
+			{
+				"useBuiltIns": false
+			}
+		]
+	],
+	"plugins": [
+		"@babel/plugin-transform-runtime"
 	]
 }
