--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "set-value": ">=4.0.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
+    "@babel/plugin-transform-runtime": "^7.16.4",
+    "babel-cli": "^7.0.0-0",
+    "babel-plugin-import": "^1.13.3",
     "babel-preset-latest": "^6.24.1",
     "chai": "^4.3.4",
     "eslint": "^8.3.0",
