--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "mocha --watch --require @babel/register --require jsdom-global/register",
+    "jest": "jest",
     "start": "node server.js",
     "build": "babel src -d build",
     "lint": "eslint ."
@@ -23,9 +24,9 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
     "@babel/register": "^7.16.0",
-    "cross-fetch": "^3.1.4",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "fetch-mock": "^9.11.0",
     "regenerator-runtime": "^0.13.9",
     "set-value": ">=4.0.1"
   },
@@ -37,6 +38,7 @@
     "babel-plugin-import": "^1.13.3",
     "chai": "^4.3.4",
     "eslint": "^8.4.1",
+    "jest": "^27.4.5",
     "jsdom": "^19.0.0",
     "jsdom-global": "^3.0.2",
     "mocha": "^9.1.3"
