--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "build": "babel src -d build",
     "lint": "eslint ."
   },
+  "jest": {
+  "automock": false,
+  "setupFiles": [
+    "./setupJest.js"
+  ]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Alpakash/the-powerpuff-girls-es6.git"
@@ -37,8 +43,10 @@
     "@babel/preset-env": "^7.0.0",
     "babel-plugin-import": "^1.13.3",
     "chai": "^4.3.4",
+    "cross-fetch": "^3.1.4",
     "eslint": "^8.4.1",
     "jest": "^27.4.5",
+    "jest-fetch-mock": "^3.0.3",
     "jsdom": "^19.0.0",
     "jsdom-global": "^3.0.2",
     "mocha": "^9.1.3"
